test/parser/negative/ImplicitThisClassForStaticFields.java.not_yet
public class ImplicitThisClassForStaticFields {
    public ImplicitThisClassForStaticFields(){}
    protected static int x;
    public int m() {
        return x;
    }
}
